# rusty-desk-parakeets

./: Cargo.toml  README.md  SPEC.md  build.sh  package-lock.json  package.json  vite.config.ts
.agents_tmp/: PLAN.md
src/: App.tsx  index.html  styles.css
src-tauri/: Cargo.toml  Cargo.toml.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs
