[package]
name = "parakeet-tdt-app"
version = "0.1.0"
description = "Cross-platform Parakeet TDT Transcription App"
authors = ["Developer"]
edition = "2021"
license = "MIT"

[lib]
name = "parakeet_tdt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# parakeet-rs for transcription (includes ONNX Runtime)
parakeet-rs = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true