[package]
name = "parakeet-tdt-app"
version = "0.1.0"
description = "Cross-platform Parakeet TDT Transcription App"
authors = ["Developer"]
edition = "2021"
license = "MIT"

[lib]
name = "parakeet_tdt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
tempfile = "3"
rubato = "0"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
# Audio decoding
ffmpeg-sidecar = "2"

# parakeet-rs for transcription (includes ONNX Runtime)
parakeet-rs = "0.3.5"

# URL parsing
url = "2"

# Directory paths
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
